// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a table width custom configuration custom-table 1`] = `
<div
  className="tc-table theme-tc-table"
>
  <table>
    <thead
      className="tc-table-head theme-tc-table-head sr-only"
    >
      <tr
        className="tc-table-head-row theme-tc-table-head-row"
      >
        <th
          className="th-name theme-tc-table-head-th"
          id="my-table-name"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-name"
          >
            Name
          </div>
        </th>
        <th
          className="th-type theme-tc-table-head-th"
          id="my-table-type"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-type"
          >
            Type
          </div>
        </th>
        <th
          className="th-desc theme-tc-table-head-th"
          id="my-table-desc"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-desc"
          >
            Description
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className="tc-table-body theme-tc-table-body"
    >
      <tr
        className="tc-table-row theme-tc-table-row classname-of-row-1"
        data-id="elem_1"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-tc-table-row classname-of-row-2"
        data-id="elem_2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render a table width custom header custom-table-with-header 1`] = `
<div
  className="tc-table theme-tc-table"
>
  <table>
    <thead
      className="tc-table-head theme-tc-table-head"
    >
      <tr
        className="tc-table-head-row theme-tc-table-head-row"
      >
        <th
          className="th-name theme-tc-table-head-th"
          id="my-table-name"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-name"
          >
            Name
          </div>
        </th>
        <th
          className="th-type theme-tc-table-head-th"
          id="my-table-type"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-type"
          >
            Type
          </div>
        </th>
        <th
          className="th-desc theme-tc-table-head-th"
          id="my-table-desc"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-desc"
          >
            Description
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className="tc-table-body theme-tc-table-body"
    >
      <tr
        className="tc-table-row theme-tc-table-row classname-of-row-1"
        data-id="elem_1"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-tc-table-row classname-of-row-2"
        data-id="elem_2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render a table width default configuration default-table 1`] = `
<div
  className="tc-table theme-tc-table"
>
  <table>
    <thead
      className="tc-table-head theme-tc-table-head sr-only"
    >
      <tr
        className="tc-table-head-row theme-tc-table-head-row"
      >
        <th
          className="th-name theme-tc-table-head-th"
          id="my-table-name"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-name"
          >
            Name
          </div>
        </th>
        <th
          className="th-type theme-tc-table-head-th"
          id="my-table-type"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-type"
          >
            Type
          </div>
        </th>
        <th
          className="th-desc theme-tc-table-head-th"
          id="my-table-desc"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-desc"
          >
            Description
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className="tc-table-body theme-tc-table-body"
    >
      <tr
        className="tc-table-row theme-tc-table-row"
        data-id="elem_1"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-tc-table-row"
        data-id="elem_2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render a table width default header default-table-with-header 1`] = `
<div
  className="tc-table theme-tc-table"
>
  <table>
    <thead
      className="tc-table-head theme-tc-table-head"
    >
      <tr
        className="tc-table-head-row theme-tc-table-head-row"
      >
        <th
          className="th-name theme-tc-table-head-th"
          id="my-table-name"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-name"
          >
            Name
          </div>
        </th>
        <th
          className="th-type theme-tc-table-head-th"
          id="my-table-type"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-type"
          >
            Type
          </div>
        </th>
        <th
          className="th-desc theme-tc-table-head-th"
          id="my-table-desc"
        >
          <div
            className="tc-table-header-cell tc-table-head-label theme-tc-table-head-label tc-table-head-label-desc"
          >
            Description
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className="tc-table-body theme-tc-table-body"
    >
      <tr
        className="tc-table-row theme-tc-table-row"
        data-id="elem_1"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-tc-table-row"
        data-id="elem_2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <td
          className="td-name theme-tc-table-row-cell"
          headers="my-table-name"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-tc-table-row-cell"
          headers="my-table-type"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-tc-table-row-cell"
          headers="my-table-desc"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-tc-table-row-data tc-table-row-data-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
